fixed contrast

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -122,6 +122,8 @@ header {
   display: none;
   width: 100%;
   margin-top: 1rem;
+  background-color: var(--primary-color);
+  /* ¡Esto fuerza el fondo azul marino real! */
 }
 
 #primary-nav.open {
